[gd_scene load_steps=65 format=3 uid="uid://dtx534hkutgs0"]

[ext_resource type="Script" uid="uid://c5rekb3en1jju" path="res://player/scripts/player.gd" id="1_utphg"]
[ext_resource type="Texture2D" uid="uid://c3evblnoj5plt" path="res://player/sprites/1/Double_Jump.png" id="2_28gy6"]
[ext_resource type="Texture2D" uid="uid://cwg42a73pmmsb" path="res://player/sprites/1/Fall.png" id="3_d8q1f"]
[ext_resource type="Texture2D" uid="uid://dkoyuxy8r2rx2" path="res://player/sprites/1/Hit.png" id="4_7e6y1"]
[ext_resource type="Texture2D" uid="uid://bvn0nj3mxihlr" path="res://player/sprites/1/Idle.png" id="5_htc74"]
[ext_resource type="Texture2D" uid="uid://be626gi6kx4sv" path="res://player/sprites/1/Jump.png" id="6_3orul"]
[ext_resource type="Texture2D" uid="uid://de1ecsc1y6iqj" path="res://player/sprites/1/Run.png" id="7_inmym"]
[ext_resource type="Texture2D" uid="uid://yp7up4tdwfie" path="res://player/sprites/1/Wall_Jump.png" id="8_nu80c"]
[ext_resource type="Script" uid="uid://6nliucqw4071" path="res://addons/xsm/state.gd" id="9_g2abb"]
[ext_resource type="Script" uid="uid://bhs7bqduhybjh" path="res://player/scripts/states/idle_state.gd" id="10_usugv"]
[ext_resource type="Script" uid="uid://dhh6x53rwegg5" path="res://player/scripts/states/run_state.gd" id="11_h3aqd"]
[ext_resource type="Script" uid="uid://cslvnutt7jexw" path="res://player/scripts/states/jump_state.gd" id="12_uvxdc"]
[ext_resource type="Script" uid="uid://c3ylx4owxru75" path="res://player/scripts/states/slide_state.gd" id="13_3l1gv"]
[ext_resource type="PackedScene" uid="uid://c2x3ckc5nyy0" path="res://player/particles/jump_particle.tscn" id="13_28gy6"]
[ext_resource type="Script" uid="uid://bay4txvm828na" path="res://player/scripts/states/fall_state.gd" id="14_tlx6e"]
[ext_resource type="Texture2D" uid="uid://ca6dth8gdbme1" path="res://assets/Sprites/dust.png" id="15_1qqmx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2daye"]
size = Vector2(15, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsu2k"]
atlas = ExtResource("2_28gy6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k12tt"]
atlas = ExtResource("2_28gy6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1bgf"]
atlas = ExtResource("2_28gy6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3802"]
atlas = ExtResource("2_28gy6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fevyy"]
atlas = ExtResource("2_28gy6")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hibaj"]
atlas = ExtResource("2_28gy6")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdsj5"]
atlas = ExtResource("4_7e6y1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee4r6"]
atlas = ExtResource("4_7e6y1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt3je"]
atlas = ExtResource("4_7e6y1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pmx8"]
atlas = ExtResource("4_7e6y1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u50mg"]
atlas = ExtResource("4_7e6y1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbgmd"]
atlas = ExtResource("4_7e6y1")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1w6v2"]
atlas = ExtResource("4_7e6y1")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueoa1"]
atlas = ExtResource("5_htc74")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vcvc"]
atlas = ExtResource("5_htc74")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7k868"]
atlas = ExtResource("5_htc74")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpc6h"]
atlas = ExtResource("5_htc74")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kltya"]
atlas = ExtResource("5_htc74")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e08e2"]
atlas = ExtResource("5_htc74")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_neg2b"]
atlas = ExtResource("5_htc74")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r33sp"]
atlas = ExtResource("5_htc74")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdf80"]
atlas = ExtResource("5_htc74")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwpg7"]
atlas = ExtResource("5_htc74")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2e45"]
atlas = ExtResource("5_htc74")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_536cc"]
atlas = ExtResource("7_inmym")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqgau"]
atlas = ExtResource("7_inmym")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cuat"]
atlas = ExtResource("7_inmym")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1aky"]
atlas = ExtResource("7_inmym")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwxat"]
atlas = ExtResource("7_inmym")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa8k8"]
atlas = ExtResource("7_inmym")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqrg6"]
atlas = ExtResource("7_inmym")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwwfm"]
atlas = ExtResource("7_inmym")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8vy0"]
atlas = ExtResource("7_inmym")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jut3y"]
atlas = ExtResource("7_inmym")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2nl5"]
atlas = ExtResource("7_inmym")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmskm"]
atlas = ExtResource("7_inmym")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdkp6"]
atlas = ExtResource("8_nu80c")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_54nrm"]
atlas = ExtResource("8_nu80c")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_55jeb"]
atlas = ExtResource("8_nu80c")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsvbx"]
atlas = ExtResource("8_nu80c")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv80c"]
atlas = ExtResource("8_nu80c")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ptfg5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsu2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k12tt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1bgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3802")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fevyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hibaj")
}],
"loop": false,
"name": &"double_jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_d8q1f")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdsj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee4r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt3je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pmx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u50mg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbgmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w6v2")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueoa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vcvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7k868")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpc6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kltya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e08e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neg2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r33sp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdf80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwpg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2e45")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_3orul")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_536cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqgau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cuat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1aky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwxat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa8k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqrg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwwfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8vy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jut3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2nl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmskm")
}],
"loop": true,
"name": &"run",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdkp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54nrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55jeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsvbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv80c")
}],
"loop": true,
"name": &"slide",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_h1bgf"]
_limits = [-28.3146, 4.04498, 0.0, 1.0]
_data = [Vector2(0, -2.49965), 0.0, 0.0, 0, 0, Vector2(1, 0.0454874), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_b3802"]
curve = SubResource("Curve_h1bgf")

[sub_resource type="Curve" id="Curve_b3802"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.516854), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_fevyy"]
curve = SubResource("Curve_b3802")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k12tt"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
angle_min = -70.0
angle_max = 70.0
angle_curve = SubResource("CurveTexture_b3802")
direction = Vector3(0, -135, 0)
spread = 0.0
initial_velocity_min = 25.0
initial_velocity_max = 50.0
gravity = Vector3(0, 5, 0)
scale_min = 0.5
scale_max = 2.0
scale_curve = SubResource("CurveTexture_fevyy")
anim_speed_min = 3.34
anim_speed_max = 5.07
turbulence_enabled = true
turbulence_noise_scale = 0.993

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_mask = 2
script = ExtResource("1_utphg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 2.5)
shape = SubResource("RectangleShape2D_2daye")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ptfg5")
animation = &"hit"
autoplay = "idle"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("9_g2abb")
history_size = 0
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")
metadata/_custom_type_script = "uid://6nliucqw4071"

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("10_usugv")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../Run")
metadata/_custom_type_script = "uid://6nliucqw4071"

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("11_h3aqd")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../Jump")
metadata/_custom_type_script = "uid://6nliucqw4071"

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("12_uvxdc")
jump_particle = ExtResource("13_28gy6")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../Slide")
metadata/_custom_type_script = "uid://6nliucqw4071"

[node name="Slide" type="Node" parent="StateMachine"]
script = ExtResource("13_3l1gv")
slide_accel = 0.05
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../Fall")
metadata/_custom_type_script = "uid://6nliucqw4071"

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("14_tlx6e")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")
metadata/_custom_type_script = "uid://6nliucqw4071"

[node name="FrontRayCast" type="RayCast2D" parent="."]
target_position = Vector2(12, 0)
collision_mask = 2

[node name="BackRayCast(redundant)" type="RayCast2D" parent="."]
target_position = Vector2(-12, 0)
collision_mask = 2

[node name="Particles" type="Node2D" parent="."]

[node name="RunParticle" type="GPUParticles2D" parent="Particles"]
z_index = -1
position = Vector2(0, 11)
emitting = false
texture = ExtResource("15_1qqmx")
process_material = SubResource("ParticleProcessMaterial_k12tt")

[node name="SlideParticle" type="GPUParticles2D" parent="Particles"]
z_index = -1
position = Vector2(11, 7)
emitting = false
amount = 4
texture = ExtResource("15_1qqmx")
process_material = SubResource("ParticleProcessMaterial_k12tt")
